<resources>
    <string name="app_name">WeatherApp</string>
    <string name="weather_app">Weather App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="do_you_have_an_account">Do you have an Account?</string>
    <string name="create_account">Create account</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="splash">Splash</string>
    <string name="loginfragment">LoginFragment</string>
    <string name="home">Home</string>
    <string name="historyfragment">HistoryFragment</string>
    <string name="currentweatherfragment">CurrentWeatherFragment</string>
    <string name="invalid_email">Invalid email</string>
    <string name="inncorrect_password">Incorrect email</string>
    <string name="offline">You are offline. Please check your internet connection.</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="pleae_enter_name">please enter name</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="password_donot_match">Passwords do not match</string>
    <string name="password_length">Passwords length must be 4-digit</string>
    <string name="User_exists">User with this email already exists</string>
    <string name="registeration_success">Registration successful</string>
    <string name="registeration_fail">Registration failed</string>
    <string name="invalid_email_pass">Invalid email and password</string>
    <string name="you_are_offline_please_check_your_internet_connection">You are offline. Please check your internet connection.</string>
    <string name="current_weather">Current Weather</string>
    <string name="history">History</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_required_msg">Location permission is required for this app. Please go to settings and enable it.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="do_you_logout">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>