<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.system.weatherapp.ui.splash.SplashFragment"
        android:label="@string/splash"
        tools:layout="@layout/fragment_splash">

        <action android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_splashFragment_to_currentWeatherFragment"
            app:destination="@id/currentWeatherFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.system.weatherapp.ui.auth.LoginFragment"
        android:label="@string/loginfragment"
        tools:layout="@layout/fragment_login">

        <action android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"/>

        <action
            android:id="@+id/action_loginFragment_to_currentWeatherFragment"
            app:destination="@id/currentWeatherFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.system.weatherapp.ui.auth.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">

        <action android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"/>
    </fragment>

    <fragment
        android:id="@+id/currentWeatherFragment"
        android:name="com.system.weatherapp.ui.home.CurrentWeatherFragment"
        android:label="@string/currentweatherfragment"
        tools:layout="@layout/fragment_current_weather" >
        <action
            android:id="@+id/action_currentWeatherFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/currentWeatherFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.system.weatherapp.ui.home.HistoryFragment"
        android:label="@string/historyfragment"
        tools:layout="@layout/fragment_history" >

    </fragment>
</navigation>
